Fix spacing issue for subscribe button on user profile

--- a/static/assets/sass/_profile.sass
+++ b/static/assets/sass/_profile.sass
@@ -262,7 +262,7 @@
     background-color: #5abd02
     color: #fff
     background-image: none
-    width: 300px
+    width: 290px
     font-size: 1.3em
 
     &:hover
